<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    tools:context="com.sureka.shubham.justjava.MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords"
        android:hint="@string/nameE"/>

    <TextView
        style="@style/headerTextStyle"
        android:text="@string/toppings"
        android:textAllCaps="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whippedCream"
        android:id="@+id/whippedCream"
        android:paddingStart="24dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/chocolate"
        android:id="@+id/chocolate"
        android:paddingStart="24dp"
        android:paddingEnd="5dp" />


    <TextView
        style="@style/headerTextStyle"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <LinearLayout
        style="@style/defaultParams"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/minus"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/defQuantity"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/plus"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        style="@style/defaultParams"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>